--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 <body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="scripts/main.js"></script>
 </body>
 </html>
