--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,14 @@
 	<title>Dine Alone Records</title>
 </head>
 <body>
+
+	<input type="text" name="artist" id="autocomplete"/>
+
+
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.24/jquery.autocomplete.min.js"></script>
 	<script src="scripts/main.js"></script>
 </body>
 </html>
