adding the new additions to javascript

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,12 @@
 	<title>Dine Alone Records</title>
 </head>
 <body>
+	<form class="searchForm" action="">
+		<input class="searchFormInput" type="text" name="artist" id="autocomplete"/>
+		<input class="searchFormSubmit" type="submit" name="artist" value="submit">
+	</form>
 
-	<input type="text" name="artist" id="autocomplete"/>
+	<iframe class="spotify" src="" frameborder="0"></iframe>
 
 
 
