added createPlaylist function

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,6 @@
 		<input class="searchFormInput" type="text" name="artist" id="autocomplete"/>
 		<input class="searchFormSubmit" type="submit" name="artist" value="submit">
 	</form>
-
-	<iframe class="spotify" src="" frameborder="0"></iframe>
-
-
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.24/jquery.autocomplete.min.js"></script>
@@ -39,6 +34,9 @@
 
 	<div class="artistsContainer">
 		<!-- handlebars cards go here. -->
+	</div>
+	<div class="spotifyContainer">
+		<!-- spotify playlist goes here -->
 	</div>
 </body>
 </html>
