--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
 				</p>{{/each}}
 			{{/if}}
 			<div class="buttonsContainer">
-				<button class="viewMoreInfo">More Info</button>
-				<button class="addToPlaylist">Add to Playlist</button>
+				<button data-artist={{id}} class="addToPlaylist">Add to Playlist</button>
 			</div>
 		</div>
 	</script>
