--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="styles/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,500,700,300,900' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<script id="artistCardTemplate" type="x-handlebars-template">
 		<div class="artistCard">
 			<div style="background-image: url({{images.[0].url}})" class="artistCardImgContainer"></div>
@@ -24,25 +25,28 @@
 </head>
 <body>
 	<header>
-		<h1 class="top">Dine Alone Records</h1>
-		<div>
-			<img src="assets/redbig.png" alt="">
+		<div class="splash">
+			<h1 class="top">Dine Alone Records</h1>
+			<div>
+				<img src="assets/redbig.png" alt="">
+			</div>
+			<h1 class="bottom">Live Stream</h1>
+			<button class="tempStartButton">Start</button>
 		</div>
-		<h1 class="bottom">Live Stream</h1>
-		<!-- insert arrow here -->
+		<form class="searchForm" action="">
+			<input class="searchFormInput" type="text" name="artist" id="autocomplete"/>
+			<input class="searchFormSubmit" type="submit" name="artist" value="submit">
+		</form>
+		<div class="artistsContainer">
+			<i class="fa fa-times-circle" aria-hidden="true"></i>
+			<!-- handlebars cards go here. -->
+		</div>
 	</header>
-	<form class="searchForm" action="">
-		<input class="searchFormInput" type="text" name="artist" id="autocomplete"/>
-		<input class="searchFormSubmit" type="submit" name="artist" value="submit">
-	</form>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.24/jquery.autocomplete.min.js"></script>
 	<script src="scripts/main.js"></script>
 
-	<div class="artistsContainer">
-		<!-- handlebars cards go here. -->
-	</div>
 	<div class="spotifyContainer">
 		<!-- spotify playlist goes here -->
 	</div>
