added error function to search.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="styles/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,500,700,300,900' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 	<script id="artistCardTemplate" type="x-handlebars-template">
 		<div style="background-image: url({{images.[0].url}})" class="artistCard">
