Responsive splash page.

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 	<main>
 		<div class="splash">
 			<h1 class="top">Dine Alone Records</h1>
-			<div>
+			<div class="splashImg">
 				<img src="assets/redbig.png" alt="">
 			</div>
 			<h1 class="bottom">Live Stream</h1>
