--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
 	<script id="addedArtistsTemplate" type="x-handlebars-template">
 		<div data-addedArtist={{id}} class="addedArtistsCard">
 			<div style="background-image: url({{images.[0].url}})" class="addedArtistImgContainer">
+				<i class="removeImg fa fa-times" aria-hidden="true"></i>
 			</div>
 			<p class="addedArtistsName">{{name}}</p>
 		</div>
