--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="styles/style.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,500,700,300,900' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+	<link rel="stylesheet" href="styles/style.css">
 	<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 	<link rel="apple-touch-icon" sizes="57x57" href="assets/apple-touch-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="assets/apple-touch-icon-60x60.png">
@@ -25,6 +25,8 @@
 	<meta name="msapplication-square150x150logo" content="assets/mediumtile.png" />
 	<meta name="msapplication-wide310x150logo" content="assets/widetile.png" />
 	<meta name="msapplication-square310x310logo" content="assets/largetile.png" />
+	<title>Dine Alone Records | Playlist Generator</title>
+	<!-- Artist Info Card Template -->
 	<script id="artistCardTemplate" type="x-handlebars-template">
 		<div style="background-image: url({{images.[0].url}})" class="artistCard">
 			<div class="artistCardImgContainer">
@@ -53,7 +55,7 @@
 			</div>
 		</div>
 	</script>
-
+	<!-- Added Artist Template -->
 	<script id="addedArtistsTemplate" type="x-handlebars-template">
 		<div data-addedArtist={{id}} class="addedArtistsCard">
 			<div style="background-image: url({{images.[0].url}})" class="addedArtistImgContainer">
@@ -62,24 +64,26 @@
 			<p class="addedArtistsName">{{name}}</p>
 		</div>
 	</script>
-
-
-	<title>Dine Alone Records</title>
 </head>
 <body>
+
 	<main>
+		<!-- Splash Page -->
 		<div class="splash">
 			<h1 class="top">Dine Alone Records</h1>
 			<div class="splashImg">
 				<img src="assets/redbig.png" alt="">
 			</div>
-			<h1 class="bottom">Live Stream</h1>
+			<h1 class="bottom">Playlist Generator</h1>
 			<button class="startButton">START</button>
 		</div>
-		<form class="searchForm" action="">
-			<input placeholder="Search for a DineAlone artist..." class="searchFormInput" type="text" name="artist" id="autocomplete"/>
-			<input class="searchFormSubmit" type="submit" name="artist" value="submit">
-		</form>
+		<!-- Search Form -->
+		<div class="form-box">
+			<form class="searchForm" action="">
+				<input placeholder="Search for a DineAlone artist..." class="searchFormInput" type="text" name="artist" id="autocomplete"/>
+				<input class="searchFormSubmit" type="submit" name="artist" value="submit">
+			</form>
+		</div>
 		<div class="artistsContainer">
 			<!-- handlebars cards go here. -->
 		</div>
@@ -89,12 +93,16 @@
 				<img class="play" src="assets/play-button.png">
 				<p><!--   --></p>
 			</div>
-			<!-- <img class="closeAddedArtistsButton" src="assets/nounx2.png"> -->
 		</div>
 		<div class="spotifyContainer">
 			<!-- spotify playlist goes here -->
 		</div>
 	</main>
+	<i class="fa fa-info-circle info-icon" aria-hidden="true"></i>
+	<div class="info-container">
+		<p>Search for a Dine Alone Artist. Add up to 4 artist's to your playlist and click the <span>play</span>
+		button to generate.</p>
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.24/jquery.autocomplete.min.js"></script>
